--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "",
+	"name": "vue-test-one",
 	"type": "module",
 	"version": "0.0.1",
 	"scripts": {
@@ -10,6 +10,12 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"astro": "^2.0.15"
+		"@astrojs/vue": "^2.0.1",
+		"astro": "^2.0.15",
+		"primevue": "^3.23.0"
+	},
+	"devDependencies": {
+		"vue": "^3.2.47",
+		"vue-tsc": "^1.2.0"
 	}
 }
